<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/properties"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minWidth="0dp"
            android:text="@string/preset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp"/>

        <Spinner
            android:id="@+id/preset_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="72dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="16dp"/>

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/preset_spinner"
            tools:layout_editor_absoluteX="72dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/actions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="16dp"/>

        <Spinner
            android:id="@+id/actions_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/priority_spinner"
            tools:layout_editor_absoluteX="72dp"/>

        <TextView
            android:id="@+id/title_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/title_editor"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="16dp"/>

        <EditText
            android:id="@id/title_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/title_label"
            tools:layout_editor_absoluteX="72dp"/>

        <TextView
            android:id="@+id/text_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/text_editor"
            android:text="@string/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_label"
            tools:layout_editor_absoluteX="16dp"/>

        <EditText
            android:id="@id/text_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_label"
            tools:layout_editor_absoluteX="72dp"/>

        <TextView
            android:id="@+id/sub_text_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/sub_text_editor"
            android:text="@string/sub_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label"
            tools:layout_editor_absoluteX="16dp"/>

        <EditText
            android:id="@id/sub_text_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/sub_text_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/sub_text_label"
            tools:layout_editor_absoluteX="72dp"/>

        <TextView
            android:id="@+id/ticker_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/ticker_editor"
            android:text="@string/ticker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_text_label"
            tools:layout_editor_absoluteX="16dp"/>

        <EditText
            android:id="@id/ticker_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/ticker_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ticker_label"
            tools:layout_editor_absoluteX="72dp"/>

        <CheckBox
            android:id="@+id/include_large_icon_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/include_large_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticker_label"
            tools:layout_editor_absoluteX="16dp"/>


        <CheckBox
            android:visibility="gone"
            android:id="@+id/local_only_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/local_only"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_large_icon_checkbox"
            tools:layout_editor_absoluteX="0dp"/>

        <CheckBox
            android:visibility="gone"
            android:id="@+id/include_content_intent_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/include_content_intent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/local_only_checkbox"
            tools:layout_editor_absoluteX="0dp"/>

        <CheckBox
            android:id="@+id/vibrate_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vibrate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_content_intent_checkbox"
            tools:layout_editor_absoluteX="16dp"/>

        <CheckBox
            android:id="@+id/sound_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vibrate_checkbox"
            tools:layout_editor_absoluteX="16dp"/>

        <CheckBox
            android:id="@+id/default_all_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sound_checkbox"
            tools:layout_editor_absoluteX="16dp"/>

        <Button
            android:id="@+id/btn_progress"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/percent_progress"
            app:layout_constraintTop_toBottomOf="@+id/default_all_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="percentProgress"
            tools:layout_editor_absoluteX="8dp"/>

        <LinearLayout
            android:id="@+id/background_pickers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vibrate_checkbox"
            tools:layout_editor_absoluteX="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
